DistributeData: fixed quickHosterCheck JDController: JDController is last ControlEvent listener in chain JDUnrar: many fixed and cleanups, fixes #1417
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@10867 ebf7c1c2-ba36-0410-9fe8-c592906822b4